# simple_visual_slam

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  plan.md
apps/: run_mono.cc
cmake/: EigenConfig.cmake
src/backend/: local_mapping.cc  local_mapping.h  optimizer.cc  optimizer.h
src/core/: camera.cc  camera.h  common.h  frame.cc  frame.h  keyframe.cc  keyframe.h  landmark.cc  landmark.h  map.cc  map.h
src/io/: euroc_dataset.cc  euroc_dataset.h  map_io.cc  map_io.h  tum_dataset.cc  tum_dataset.h
src/loop_closing/: loop_closing.cc  loop_closing.h
src/tracking/: initializer.cc  initializer.h  tracking.cc  tracking.h
